[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healpix_painter"
version = "0.0.1"
authors = [
  { name="Tomás Cabrera", email="tcabrera@andrew.cmu.edu" },
]
description = "Yet another package to optimize HEALPix coverage with wide-field telescopes."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tomas-cabrera/healpix_painter"
Issues = "https://github.com/tomas-cabrera/healpix_painter"